@@ -1,24 +1,6 @@
 
 # $Id$
 
-### Conditional Expectation and Covariance
-setClass(Class = "ExpectCovar",
-    representation = representation(
-        expectation = "numeric",
-        covariance  = "matrix",
-        dimension   = "integer"
-   )
-)
-
-### Expectation and Covariance of the influence function 
-### (+ sum of weights)
-setClass(Class = "ExpectCovarInfluence",
-    representation = representation(
-        sumweights = "numeric"
-    ),
-    contains = "ExpectCovar"
-)
-
 ### Linear statistic with expectation and covariance
 setClass(Class = "LinStatExpectCovar",
     representation = representation(
